# tripwire

./: Cargo.toml  README.md  flake.nix
poc/: Cargo.toml  build.rs
poc-tui/: Cargo.toml  LICENSE  README.md
poc-tui/src/: app.rs  debugger_ctx.rs  event.rs  function_mapping.rs  main.rs  ui.rs
poc/src/: cosmwasm.rs  main.rs  perf_util.rs
poc/wasm-binary/src/: lib.rs
poc/wasm-runtime/: Cargo.toml  build.rs
poc/wasm-runtime/src/: main.rs  runner.rs
