[workspace]
edition = "2024"
resolver = "3"
members = [
  "poc",
  "poc/wasm-binary"
]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
wasmtime = "41.0.3"

