[package]
name = "poc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
wasmtime = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
libc = "0.2.180"
nix = { version = "0.31.1", features = ["ptrace", "process"] }
tokio = { workspace = true , features = [
  "rt-multi-thread",
  "macros",
  "signal",
]}

